--- a/SaraiManagement/Views/Donatario/Details.cshtml
+++ b/SaraiManagement/Views/Donatario/Details.cshtml
@@ -38,8 +38,8 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.DonatarioID">Edit</a> |
-    <a asp-action="Index">Back to List</a>
-</div>
-</body>
-</html>
+    <<a asp-action="Edit" asp-route-id="@Model.DonatarioID">Edit</a> |
+        <a asp-action="Index">Back to List</a>
+    </div>
+    </body>
+    </html>
