--- a/SaraiManagement/Views/Doador/Edit.cshtml
+++ b/SaraiManagement/Views/Doador/Edit.cshtml
@@ -1,18 +1,19 @@
 ﻿@model SaraiManagement.Models.Doador
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Edit";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Create</h1>
+<h1>Edit</h1>
 
 <h4>Doador</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="DoadorID" />
             <div class="form-group">
                 <label asp-for="Nome" class="control-label"></label>
                 <input asp-for="Nome" class="form-control" />
@@ -25,7 +26,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="regularidadeDoador" class="control-label"></label>
-                <select asp-for="regularidadeDoador"class="form-control"></select>
+                <select asp-for="regularidadeDoador" class="form-control"></select>
                 <span asp-validation-for="regularidadeDoador" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -34,7 +35,7 @@
                 <span asp-validation-for="inicioDaDoacao" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
