--- a/SaraiManagement/Views/_ViewImports.cshtml
+++ b/SaraiManagement/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using SaraiManagement
 @using SaraiManagement.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper SaraiManagement.Infraestrutura.*, SaraiManagement
