--- a/SaraiManagement/Views/_ViewImports.cshtml
+++ b/SaraiManagement/Views/_ViewImports.cshtml
@@ -1,3 +1,9 @@
 ﻿@using SaraiManagement
 @using SaraiManagement.Models
+@using SaraiManagement.Models.Enuns
+@using SaraiManagement.Models.ViewModels
+@using SaraiManagement.Infraestrutura
+
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper SaraiManagement.Infraestrutura.*, SaraiManagement
