--- a/SaraiManagement/Views/Doador/Create.cshtml
+++ b/SaraiManagement/Views/Doador/Create.cshtml
@@ -25,7 +25,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="regularidadeDoador" class="control-label"></label>
-                <select asp-for="regularidadeDoador" class="form-control"></select>
+                <select asp-for="regularidadeDoador" class="form-control" asp-items="Html.GetEnumSelectList<SaraiManagement.Models.Enuns.Regularidade>()" ></select>
                 <span asp-validation-for="regularidadeDoador" class="text-danger"></span>
             </div>
             <div class="form-group">
