--- a/SaraiManagement/Views/Donatario/Details.cshtml
+++ b/SaraiManagement/Views/Donatario/Details.cshtml
@@ -1,17 +1,11 @@
 ﻿@model SaraiManagement.Models.Donatario
 
 @{
-    Layout = null;
+    ViewData["Title"] = "Details";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Details</title>
-</head>
-<body>
+<h1>Details</h1>
 
 <div>
     <h4>Donatario</h4>
@@ -22,6 +16,12 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Nome)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Endereco)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Endereco)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Telefone)
@@ -38,8 +38,6 @@
     </dl>
 </div>
 <div>
-    <<a asp-action="Edit" asp-route-id="@Model.DonatarioID">Edit</a> |
-        <a asp-action="Index">Back to List</a>
-    </div>
-    </body>
-    </html>
+    <a asp-action="Edit" asp-route-id="@Model.DonatarioID">Edit</a> |
+    <a asp-action="Index">Back to List</a>
+</div>
