--- a/SaraiManagement/Views/Donatario/Edit.cshtml
+++ b/SaraiManagement/Views/Donatario/Edit.cshtml
@@ -1,17 +1,11 @@
 ﻿@model SaraiManagement.Models.Donatario
 
 @{
-    Layout = null;
+    ViewData["Title"] = "Edit";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Edit</title>
-</head>
-<body>
+<h1>Edit</h1>
 
 <h4>Donatario</h4>
 <hr />
@@ -24,6 +18,11 @@
                 <label asp-for="Nome" class="control-label"></label>
                 <input asp-for="Nome" class="form-control" />
                 <span asp-validation-for="Nome" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Endereco" class="control-label"></label>
+                <input asp-for="Endereco" class="form-control" />
+                <span asp-validation-for="Endereco" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Telefone" class="control-label"></label>
@@ -46,5 +45,3 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
-</body>
-</html>
