--- a/SaraiManagement/Views/Estoque/Delete.cshtml
+++ b/SaraiManagement/Views/Estoque/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model SaraiManagement.Models.Donatario
+﻿@model SaraiManagement.Models.Estoque
 
 @{
     ViewData["Title"] = "Delete";
@@ -9,37 +9,31 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Donatario</h4>
+    <h4>Estoque</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Nome)
+            @Html.DisplayNameFor(model => model.Descricao)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Nome)
+            @Html.DisplayFor(model => model.Descricao)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Endereco)
+            @Html.DisplayNameFor(model => model.Quantidade)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Endereco)
+            @Html.DisplayFor(model => model.Quantidade)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Telefone)
+            @Html.DisplayNameFor(model => model.Categoria)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Telefone)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Email)
+            @Html.DisplayFor(model => model.Categoria)
         </dd>
     </dl>
     
     <form asp-action="Delete">
-        <input type="hidden" asp-for="DonatarioID" />
+        <input type="hidden" asp-for="EstoqueID" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
