--- a/SaraiManagement/Views/Estoque/Create.cshtml
+++ b/SaraiManagement/Views/Estoque/Create.cshtml
@@ -5,7 +5,6 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Create</h1>
 
 <h4>Estoque</h4>
 <hr />
@@ -36,6 +35,6 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Voltar a Lista</a>
 </div>
 
