--- a/SaraiManagement/Views/Estoque/Edit.cshtml
+++ b/SaraiManagement/Views/Estoque/Edit.cshtml
@@ -5,7 +5,6 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Edit</h1>
 
 <h4>Estoque</h4>
 <hr />
@@ -26,17 +25,17 @@
             </div>
             <div class="form-group">
                 <label asp-for="Categoria" class="control-label"></label>
-                <select asp-for="Categoria" class="form-control"></select>
+                <select asp-for="Categoria" class="form-control" asp-items="Html.GetEnumSelectList<SaraiManagement.Models.Enuns.Categoria>()"></select>
                 <span asp-validation-for="Categoria" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Salvar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Voltar a Lista</a>
 </div>
 
