--- a/SaraiManagement/Views/Doacao/Create.cshtml
+++ b/SaraiManagement/Views/Doacao/Create.cshtml
@@ -15,7 +15,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="DonatarioID" class="control-label"></label>
-                <select asp-for="DonatarioID" class ="form-control" asp-items="ViewBag.DonatarioID"></select>
+                <select asp-for="DonatarioID" class="form-control" asp-items="ViewBag.DonatarioID"></select>
             </div>
             <div class="form-group">
                 <label asp-for="dataDoacao" class="control-label"></label>
@@ -24,19 +24,36 @@
             </div>
             <div class="form-group">
                 <label asp-for="UsuarioID" class="control-label"></label>
-                <select asp-for="UsuarioID" class ="form-control" asp-items="ViewBag.UsuarioID"></select>
+                <select asp-for="UsuarioID" class="form-control" asp-items="ViewBag.UsuarioID"></select>
             </div>
+            <div>
+                <div>
+                    <a class="btn btn-outline-secondary">Fazer Doaçao em Dinheiro</a>
+
+                </div><br />
+                <div>
+                    <a asp-controller="ItemDoado" asp-action="Create" class="btn btn-outline-secondary">Fazer Doaçao de Items</a>
+
+                </div>
+            </div>
+           
+
+
             <div class="form-group">
+
                 <label asp-for="Valor" class="control-label"></label>
                 <input asp-for="Valor" class="form-control" />
                 <span asp-validation-for="Valor" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="CaixaID" class="control-label"></label>
-                <select asp-for="CaixaID" class ="form-control" asp-items="ViewBag.CaixaID"></select>
+                <select asp-for="CaixaID" class="form-control" asp-items="ViewBag.CaixaID"></select>
             </div>
+
+
+
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Doar" class="btn btn-primary" />
             </div>
         </form>
     </div>
@@ -45,4 +62,5 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
+
 
