--- a/SaraiManagement/Views/ItemDoado/Create.cshtml
+++ b/SaraiManagement/Views/ItemDoado/Create.cshtml
@@ -1,17 +1,11 @@
 ﻿@model SaraiManagement.Models.ItemDoado
 
 @{
-    Layout = null;
+    ViewData["Title"] = "Create";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Create</title>
-</head>
-<body>
+<h1>Create</h1>
 
 <h4>ItemDoado</h4>
 <hr />
@@ -25,7 +19,16 @@
             </div>
             <div class="form-group">
                 <label asp-for="EstoqueID" class="control-label"></label>
-                <select asp-for="EstoqueID" class ="form-control" asp-items="ViewBag.EstoqueID"></select>
+                <select asp-for="EstoqueID" class="form-control" asp-items="ViewBag.EstoqueID"></select>
+                
+                
+                
+                <div class="form-group">
+                    <a class="btn btn-outline-dark" type="submit" asp-controller="Estoque" asp-action=Index>Estoque</a>
+                </div>
+
+
+
             </div>
             <div class="form-group">
                 <label asp-for="Quantidade" class="control-label"></label>
@@ -43,8 +46,3 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
-</body>
-</html>
