--- a/SaraiManagement/Views/Doacao/Create.cshtml
+++ b/SaraiManagement/Views/Doacao/Create.cshtml
@@ -4,8 +4,23 @@
     ViewData["Title"] = "Create";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<style type="text/css">
+    .hidden{display:none}
+</style>
 
-<h1>Create</h1>
+<script>
+    function mostra(id) {
+        if (document.getElementById(id).style.display == 'block') {
+            document.getElementById(id).style.display = 'none';
+        }
+        else {
+            document.getElementById(id).style.display = 'block';
+        }
+    }
+
+</script>
+
+<h1>Create </h1>
 
 <h4>Doacao</h4>
 <hr />
@@ -26,29 +41,30 @@
                 <label asp-for="UsuarioID" class="control-label"></label>
                 <select asp-for="UsuarioID" class="form-control" asp-items="ViewBag.UsuarioID"></select>
             </div>
+          
             <div>
-                <div>
-                    <a class="btn btn-outline-secondary">Fazer Doaçao em Dinheiro</a>
-
+                <div >
+                    <a class="btn btn-primary" onclick="mostra('test')">Fazer Doaçao em Dinheiro</a>
                 </div><br />
                 <div>
-                    <a asp-controller="ItemDoado" asp-action="Create" class="btn btn-outline-secondary">Fazer Doaçao de Items</a>
-
+                    <a asp-controller="ItemDoado" asp-action="Create" class="btn btn-primary">Fazer Doaçao de Items</a>
                 </div>
             </div>
            
 
-
-            <div class="form-group">
-
-                <label asp-for="Valor" class="control-label"></label>
-                <input asp-for="Valor" class="form-control" />
-                <span asp-validation-for="Valor" class="text-danger"></span>
+            <div id="test" class="hidden form-group" style="display:none">
+                <div >
+                    <label asp-for="Valor" class="control-label"></label>
+                    <input asp-for="Valor" class="form-control" />
+                    <span asp-validation-for="Valor" class="text-danger"></span>
+                </div>
+                <div>
+                    <label asp-for="CaixaID" class="control-label"></label>
+                    <select asp-for="CaixaID" class="form-control" asp-items="ViewBag.CaixaID"></select>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="CaixaID" class="control-label"></label>
-                <select asp-for="CaixaID" class="form-control" asp-items="ViewBag.CaixaID"></select>
-            </div>
+                   
+                    
 
 
 
