--- a/SaraiManagement/Views/Estoque/Index.cshtml
+++ b/SaraiManagement/Views/Estoque/Index.cshtml
@@ -38,7 +38,7 @@
         <tr>
             <td>
                 <div>
-                    <a class="btn btn-outline-success" asp-controller="ItemDoado" asp-action="Create">Selecionar</a>
+                    <a class="btn btn-outline-success" asp-controller="ItemDoado" asp-action="Create" asp-route-id="@item.EstoqueID" >Selecionar</a>
                 </div>
             </td>
            
