--- a/SaraiManagement/Views/ItemDoado/Create.cshtml
+++ b/SaraiManagement/Views/ItemDoado/Create.cshtml
@@ -13,23 +13,23 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="DoacaoID" />
             <div class="form-group">
                 <label asp-for="DoacaoID" class="control-label"></label>
-                <select asp-for="DoacaoID" class ="form-control" asp-items="ViewBag.DoacaoID"></select>
+                <input asp-for="DoacaoID" class="form-control" />
+
             </div>
             <div class="form-group">
                 <label asp-for="EstoqueID" class="control-label"></label>
-                <select asp-for="EstoqueID" class="form-control" asp-items="ViewBag.EstoqueID"></select>
-                
-                
-                
-                <div class="form-group">
-                    <a class="btn btn-outline-dark" type="submit" asp-controller="Estoque" asp-action=Index>Estoque</a>
-                </div>
-
-
-
+                <input asp-for="EstoqueID" class="form-control" />
+                <!--<select asp-for="EstoqueID" class="form-control" asp-items="ViewBag.EstoqueID"></select>-->
+                <span asp-validation-for="EstoqueID" class="text-danger"></span>
             </div>
+
+            <div class="form-group">
+                <a class="btn btn-outline-dark" type="submit" asp-controller="Estoque" asp-action=Index>Estoque</a>
+            </div>
+
             <div class="form-group">
                 <label asp-for="Quantidade" class="control-label"></label>
                 <input asp-for="Quantidade" class="form-control" />
