--- a/SaraiManagement/Views/Movimentacao/Edit.cshtml
+++ b/SaraiManagement/Views/Movimentacao/Edit.cshtml
@@ -1,18 +1,19 @@
 ﻿@model SaraiManagement.Models.Movimentacao
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Edit";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Create</h1>
+<h1>Edit</h1>
 
 <h4>Movimentacao</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="MovimentacaoID" />
             <div class="form-group">
                 <label asp-for="Valor" class="control-label"></label>
                 <input asp-for="Valor" class="form-control" />
@@ -35,23 +36,27 @@
             </div>
             <div class="form-group">
                 <label asp-for="DoadorID" class="control-label"></label>
-                <select asp-for="DoadorID" class ="form-control" asp-items="ViewBag.DoadorID"></select>
+                <select asp-for="DoadorID" class="form-control" asp-items="ViewBag.DoadorID"></select>
+                <span asp-validation-for="DoadorID" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="UsuarioID" class="control-label"></label>
-                <select asp-for="UsuarioID" class ="form-control" asp-items="ViewBag.UsuarioID"></select>
+                <select asp-for="UsuarioID" class="form-control" asp-items="ViewBag.UsuarioID"></select>
+                <span asp-validation-for="UsuarioID" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Criar" class="btn btn-primary" />
+                <label asp-for="CaixaID" class="control-label"></label>
+                <select asp-for="CaixaID" class="form-control" asp-items="ViewBag.CaixaID"></select>
+                <span asp-validation-for="CaixaID" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="List">Back to List</a>
+    <a asp-action="Index">Back to List</a>
 </div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
