--- a/SaraiManagement/Views/Aluno/Details.cshtml
+++ b/SaraiManagement/Views/Aluno/Details.cshtml
@@ -54,10 +54,10 @@
             @Html.DisplayFor(model => model.NomeResponsavel)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Período)
+            @Html.DisplayNameFor(model => model.Periodo)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Período)
+            @Html.DisplayFor(model => model.Periodo)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Admissao)
