--- a/SaraiManagement/Views/Aluno/Create.cshtml
+++ b/SaraiManagement/Views/Aluno/Create.cshtml
@@ -53,9 +53,9 @@
                 <span asp-validation-for="NomeResponsavel" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Período" class="control-label"></label>
-                <select asp-for="@Model.Período" class="form-control" asp-items="Html.GetEnumSelectList<SaraiManagement.Models.Enuns.Periodo>()"></select>
-                <span asp-validation-for="Período" class="text-danger"></span>
+                <label asp-for="Periodo" class="control-label"></label>
+                <select asp-for="@Model.Periodo" class="form-control" asp-items="Html.GetEnumSelectList<SaraiManagement.Models.Enuns.Periodo>()"></select>
+                <span asp-validation-for="Periodo" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Admissao" class="control-label"></label>
