--- a/SaraiManagement/Views/Aluno/Edit.cshtml
+++ b/SaraiManagement/Views/Aluno/Edit.cshtml
@@ -55,9 +55,9 @@
                 <span asp-validation-for="NomeResponsavel" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Período" class="control-label"></label>
-                <input asp-for="Período" class="form-control" />
-                <span asp-validation-for="Período" class="text-danger"></span>
+                <label asp-for="Periodo" class="control-label"></label>
+                <input asp-for="Periodo" class="form-control" />
+                <span asp-validation-for="Periodo" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Admissao" class="control-label"></label>
