--- a/SaraiManagement/Views/Doacao/Create.cshtml
+++ b/SaraiManagement/Views/Doacao/Create.cshtml
@@ -20,7 +20,6 @@
 
 </script>
 
-<h1>Create </h1>
 
 <h4>Doacao</h4>
 <hr />
@@ -41,19 +40,18 @@
                 <label asp-for="UsuarioID" class="control-label"></label>
                 <select asp-for="UsuarioID" class="form-control" asp-items="ViewBag.UsuarioID"></select>
             </div>
-          
+
             <div>
-                <div >
-                    <a class="btn btn-primary" onclick="mostra('test')">Fazer Doaçao em Dinheiro</a>
+                <div>
+                    <a class="btn btn-primary" onclick="mostra('test')">Doaçao em Dinheiro</a>
                 </div><br />
                 <div>
-                    <a asp-controller="ItemDoado" asp-action="Create" class="btn btn-primary">Fazer Doaçao de Items</a>
+                    <input type="submit" value="Fazer doaçao de Item"  asp-action="List" class="btn btn-primary" />
                 </div>
             </div>
            
-
             <div id="test" class="hidden form-group" style="display:none">
-                <div >
+                <div>
                     <label asp-for="Valor" class="control-label"></label>
                     <input asp-for="Valor" class="form-control" />
                     <span asp-validation-for="Valor" class="text-danger"></span>
@@ -63,9 +61,6 @@
                     <select asp-for="CaixaID" class="form-control" asp-items="ViewBag.CaixaID"></select>
                 </div>
             </div>
-                   
-                    
-
 
 
             <div class="form-group">
