--- a/SaraiManagement/Views/ItemDoado/Create.cshtml
+++ b/SaraiManagement/Views/ItemDoado/Create.cshtml
@@ -14,14 +14,12 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="DoacaoID" class="control-label"></label>
-                <select asp-for="DoacaoID" class ="form-control" asp-items="ViewBag.DoacaoID"></select>
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <input type="hidden" asp-for="DoacaoID" />
             </div>
             <div class="form-group">
                 <label asp-for="EstoqueID" class="control-label"></label>
                 <select asp-for="EstoqueID" class="form-control" asp-items="ViewBag.EstoqueID"></select>
-                
-                
                 
                 <div class="form-group">
                     <a class="btn btn-outline-dark" type="submit" asp-controller="Estoque" asp-action=Index>Estoque</a>
