Atualizacao Tela Inicial

--- a/SaraiManagement/Views/Shared/_Layout.cshtml
+++ b/SaraiManagement/Views/Shared/_Layout.cshtml
@@ -8,17 +8,16 @@
     <title>Sarai Management</title>
 </head>
 <body>
-    <div class="navbar navbar-inverse bg-inverse" role="navigation">
+    <div class="navbar navbar-dark bg-dark" role="navigation">
         <a class="navbar-brand" href="#"> SARAI MANAGEMENT</a>
     </div>
     <!-- m (margin) Margem externa de uma div
          p (padding) Margem interna de uma div -->
     <div class="row m-1 p-1">
-        <div id="categories" class="col-2">
-            Insira algum conteúdo útil aqui
+        <div id="categories" class="col">
         </div>
         <!--Renderbody é o que ta dentro de uma view, fora disso não muda continua com suas proprias formatações-->
-        <div class="col-9">
+        <div class="col-11">
             @RenderBody()
         </div>
     </div>
