--- a/SaraiManagement/Views/Movimentacao/List.cshtml
+++ b/SaraiManagement/Views/Movimentacao/List.cshtml
@@ -10,7 +10,7 @@
     <div class="card card-outline-primary m-1 p-1">
         <div class="bg-faded p-1">
             <h4>
-                <a asp-action="Details" asp-route-id="@m.MovimentacaoID">@m.Descricao </a>
+                <a asp-action="Consultar" asp-route-id="@m.MovimentacaoID">@m.Descricao </a>
                 <span class="badge badge-pill badge-primary" style="float:right">
                     <small>@m.Valor</small>
                 </span>
