--- a/SaraiManagement/Views/Movimentacao/Create.cshtml
+++ b/SaraiManagement/Views/Movimentacao/Create.cshtml
@@ -49,7 +49,7 @@
 </div>
 
 <div>
-    <a asp-action="List">Back to List</a>
+       <a asp-action="List" asp-route-id="@Model.MovimentacaoID" class="btn btn-success btn-lg" role="button" aria-pressed="true">Voltar a Lista</a>
 </div>
 
 @section Scripts {
