--- a/SaraiManagement/Views/Movimentacao/Delete.cshtml
+++ b/SaraiManagement/Views/Movimentacao/Delete.cshtml
@@ -58,7 +58,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="MovimentacaoID" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="List">Back to List</a>
+        <input type="submit" value="Excluir" class="btn btn-danger" />
+        <a asp-action="List" asp-route-id="@Model.MovimentacaoID" class="btn btn-success" role="button" aria-pressed="true">Voltar a Lista</a>
     </form>
 </div>
