--- a/SaraiManagement/Views/Movimentacao/Edit.cshtml
+++ b/SaraiManagement/Views/Movimentacao/Edit.cshtml
@@ -50,13 +50,12 @@
                 <span asp-validation-for="CaixaID" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Salvar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
-
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="List" asp-route-id="@Model.MovimentacaoID" class="btn btn-success" role="button" aria-pressed="true">Voltar a Lista</a>
 </div>
 
