--- a/SaraiManagement/Views/Usuario/Delete.cshtml
+++ b/SaraiManagement/Views/Usuario/Delete.cshtml
@@ -34,7 +34,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="UsuarioID" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Excluir" class="btn btn-danger" />
+        <a asp-action="List" asp-route-id="@Model.UsuarioID" class="btn btn-success" role="button" aria-pressed="true">Voltar a Lista</a>
     </form>
 </div>
