--- a/SaraiManagement/Views/Doacao/Create.cshtml
+++ b/SaraiManagement/Views/Doacao/Create.cshtml
@@ -46,7 +46,7 @@
                     <a class="btn btn-primary" onclick="mostra('test')">Fazer Doaçao em Dinheiro</a>
                 </div><br />
                 <div>
-                    <a asp-controller="ItemDoado" asp-action="Create" class="btn btn-primary">Fazer Doaçao de Items</a>
+                    <a asp-controller="Estoque" asp-action="Index" class="btn btn-primary">Fazer Doaçao de Items</a>
                 </div>
             </div>
            
@@ -63,7 +63,7 @@
             </div>
 
             <div class="form-group">
-                <input type="submit" value="Doar" class="btn btn-primary" />
+                <input type="submit" value="Doar"/>
             </div>
         </form>
     </div>
