--- a/SaraiManagement/Views/Estoque/Details.cshtml
+++ b/SaraiManagement/Views/Estoque/Details.cshtml
@@ -32,6 +32,7 @@
     </dl>
 </div>
 <div>
+    <a asp-controller="ItemDoado" asp-action="Create" asp-route-id="@Model.EstoqueID">Selecionar</a>
     <a asp-action="Edit" asp-route-id="@Model.EstoqueID">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
