--- a/SaraiManagement/Views/Shared/_Layout.cshtml
+++ b/SaraiManagement/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="navbar navbar-dark bg-dark" role="navigation">
-        <a class="navbar-brand" href="#"> SARAI MANAGEMENT</a>
+        <a class="navbar-brand" asp-controller="TelaInicial" asp-action="Index"> SARAI MANAGEMENT</a>
     </div>
     <!-- m (margin) Margem externa de uma div
          p (padding) Margem interna de uma div -->
